Strip down the example to use jbang